# discord-quest-completer

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  typed-router.d.ts  vite.config.ts
.github/workflows/: build-release.yaml  pages.yaml  rust-check.yml
dummy-window/: .gitignore
dummy-window/dummy-window/: Form1.Designer.cs  Form1.cs  Program.cs  dummy-window.csproj
dummy-window/dummy-window/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
pages-src/: README.md  gen-main.mjs
src/: App.vue  DQC.ts  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: event.rs  lib.rs  rpc.rs  runner.rs
src-tauri/src/commands/: detectables.rs  game_dispatcher.rs  mod.rs
src-tauri/src/db/: init.rs
src-template/: Cargo.toml
src-template/src/: main.rs
src-win/: Cargo.toml
src-win/src/: main.rs  tray.rs
src/components/: GameExecutables.vue  MainLayout.vue
src/composables/: app-state.ts  game-runner.ts
src/pages/: HomeView.vue  HomeViewV2.vue  Playground.vue  Settings.vue  index.vue
src/services/: DiscordQuestHandlerAPI.ts  fake-games.ts
src/types/: types.d.ts
src/utils/: json-parse.ts  search.ts
