[package]
name = "discord-quest-completer"
version = "25.4.18"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
discord-sdk = "0.4.0"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "process", "macros"] }
once_cell = "1.21.3"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
lazy_static = "1.5.0"
shared_child = "1.1.1"
sysinfo = "0.36.1"

