[package]
name = "discord-status-app"
version = "0.1.0"
edition = "2021"
description = "A background application for Discord rich presence with daemon mode support"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "discord-status-app"
path = "src/main.rs"
