[package]
name = "src-win"
version = "0.1.0"
edition = "2021"

[dependencies]
minifb = "0.28"
tray-icon = "0.11"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies.windows-sys]
version = "0.59"

[[bin]]
name = "src-win"
path = "src/main.rs"

[profile.release]
opt-level = "z"       # Optimize for size
lto = true            # Enable Link Time Optimization
codegen-units = 1     # Reduce parallel code generation units to increase optimization
panic = "abort"       # Remove panic unwinding code
strip = true          # Strip symbols from binary